too much stuff to count

--- a/16LessonSixteen/in-class-project/index.html
+++ b/16LessonSixteen/in-class-project/index.html
@@ -1,28 +1,82 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <title></title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<div class="section">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-lg-6">
-      <div class="row">
-        <div class="col-sm-12">
+    <div class="section">
+        <div class="container">
+            <div class="row">
+
+
+            <div class="col-xs-12 col-sm-12 col-lg-6 top">
+                <div class="well">Banjo fashion axe you probably haven't heard of them hashtag viral. +1 microdosing af tofu subway tile, tattooed everyday carry thundercats flexitarian bespoke farm-to-table pickled authentic raclette aesthetic. Banjo fashion axe you probably haven't
+                heard of them hashtag viral. +1 microdosing af tofu subway tile, tattooed everyday carry thundercats flexitarian bespoke farm-to-table pickled authentic raclette aesthetic. Banjo fashion axe you probably haven't heard of them hashtag
+                viral. +1 microdosing af tofu subway tile, tattooed everyday carry thundercats flexitarian bespoke farm-to-table pickled authentic raclette aesthetic.</div>
+            </div>
+            <div class="col-lg-6 topRightFlex">
+                <div class="col-xs-12 col-sm-6 col-lg-6 fourSquare topSquareOne">
+                    <img src="books.png" />
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-6 fourSquare">
+                    <img src="books.png" />
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-6 fourSquare textTest">
+                    <div class="well">
+                    <h3>Responsive Website</h3></div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-6 fourSquare">
+                    <img src="notebook.png" />
+                </div>
+            </div>
+            </div>
+            <!--  Where the top row on Desktop ends-->
+
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="well">6</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+                <div class="well">7</div>
+            </div>
+
+
+
+            <!-- The tricky part of the code where this thing needs to move around -->
+            <div class="col-xs-12 col-sm-12 col-lg-6 bottom pull-right">
+                <div class="well">
+
+                <h3>We are the most awarded advertising agency in the world</h3>
+                <p>
+                    Banjo fashion axe you probably haven't heard of them hashtag viral. +1 microdosing af tofu subway tile, tattooed everyday carry thundercats flexitarian bespoke farm-to-table pickled authentic raclette aesthetic. Banjo fashion axe you probably haven't
+                    heard of them hashtag viral. +1 microdosing af tofu subway tile, tattooed everyday carry thundercats flexitarian bespoke farm-to-table pickled authentic raclette aesthetic. Banjo fashion axe you probably haven't heard of them hashtag
+                    viral. +1 microdosing af tofu subway tile, tattooed everyday carry thundercats flexitarian bespoke farm-to-table pickled authentic raclette aesthetic.
+                </p>
+                </div>
+            </div>
+
+
+            <div class="col-xs-12 col-sm-6 col-lg-3 pull-left">
+                <div class="well">9</div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-3 pull-left">
+                <div class="well">10</div>
+
+            </div>
+            <!-- FooterArea -->
+            <div class="col-xs-12 col-sm-12 footerSmall">
+                Footer
+            </div>
 
         </div>
-      </div>
     </div>
 
-    </div>
-
-  </div>
-</div>
 
 
 
@@ -32,58 +86,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </body>
+
 </html>
