--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
     <div class="row sixteenSeventeen">
         <div class="col-lg-6 lessonSixteen box">
             <h1>Lesson 16</h1>
-            <a href="./16LessonSixteen/in-class-project/animate.html">In Class Project</a>
+            <a href="./16LessonSixteen/in-class-project/index.html">In Class Project</a>
+            <a href="./16LessonSixteen/in-class-project/indexFlexBox.html">In Class Project w/ FlexBox</a>
             <a href="./16LessonSixteen/homework">Homework</a>
         </div>
         <div class="col-lg-6 lessonSeventeen box">
