--- a/19LessonNineteen/homework/index.html
+++ b/19LessonNineteen/homework/index.html
@@ -1,10 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <title></title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div id="banner">
+  	<div class="wrap-center">
+		<div class="banner-centered" id="banner-text">
+			<h2>Hello <strong>We Are Company-Name</strong>, Glad To See You. :-)</h2>
+		</div>
+	</div>
+</div>
 
+<script>function scrollBanner() {
+  $(document).scroll(function(){
+  	var scrollPos = $(this).scrollTop();
+  	$('#banner-text').css({
+  	  'top' : (scrollPos/3)+'px',
+  	  'opacity' : 1-(scrollPos/510)
+  	});
+  	$('#banner').css({
+  	  'background-position' : 'center ' + (-scrollPos/2)+'px'
+  	});
+  });
+}
+scrollBanner();</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
